Added redditor profile. Added links for redditor profile. Extended get_time_elapsed.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 - Image supp doesnt work for text/html extensions
 - Form for searching for subreddit
 - Form for searching for redditor
-- Make redditor profile (showing comments)
-- Give href to links for redditor profile
+- Make redditor profile show comments
 - Comment tree
